--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^5.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
+    "mongoose": "^5.7.4",
     "node-sass": "^4.12.0",
+    "nodemon": "^1.19.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
