--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,7 +23,9 @@
     "@angular/router": "^5.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "mongoose": "^5.7.4",
+    "ngx-pipes": "^2.5.6",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
     "rxjs": "^5.5.6",
