--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
     "ngx-pipes": "^2.5.6",
     "node-sass": "^4.12.0",
