--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/jquery": "^3.2.12",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.4",
+    "ng2-daterangepicker": "^2.0.12",
     "ngx-pipes": "^2.5.6",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
