--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.2",
     "@types/jquery": "^3.2.12",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -33,6 +34,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.4",
     "ng2-daterangepicker": "^2.0.12",
+    "ng2-toastr": "^4.1.2",
     "ngx-pipes": "^2.5.6",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
