--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.2",
     "@types/jquery": "^3.2.12",
+    "aws-sdk": "^2.601.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -33,8 +34,11 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.7.4",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-toastr": "^4.1.2",
+    "ngx-image-cropper": "^2.0.4",
     "ngx-pipes": "^2.5.6",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
