complete image-upload

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.2",
     "@types/jquery": "^3.2.12",
+    "angular-star-rating": "^4.0.0-beta.3",
     "aws-sdk": "^2.601.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
+    "css-star-rating": "^1.2.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
@@ -38,7 +40,7 @@
     "multer-s3": "^2.9.0",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-toastr": "^4.1.2",
-    "ngx-image-cropper": "^2.0.4",
+    "ngx-image-cropper": "^1.0.1",
     "ngx-pipes": "^2.5.6",
     "node-sass": "^4.12.0",
     "rxjs": "^5.5.6",
